2018-11-15  Ben Elliston  <bje@gnu.org>

	* runtest.exp (load_lib): Whitespace fix.

2018-11-11  Jacob Bachmeyer  <jcb62281@gmail.com>

	* lib/ssh.exp: Clean up whitespace.
	* lib/remote.exp: Clean up whitespace.
	(remote_expect): Change literal tab to "\t" in regexp.

2018-11-05  Ben Elliston  <bje@gnu.org>

	* config.guess: Update to latest version.
	* config.sub: Likewise.

2018-11-02  Ben Elliston  <bje@gnu.org>

	* Makefile.in: Regenerate.

2018-10-31  Jacob Bachmeyer  <jcb62281@gmail.com>

	* Makefile.am (DEJATOOL): List tools in testsuite.
	(RUNTESTDEFAULTFLAGS): Adjust to support per-tool testing.
	* testsuite/config/default.exp: Rename from this ...
	* testsuite/lib/runtest.exp: ... to this.
	(runtest_exit): Remove spurious "close". This was causing per-tool
	testing to fail, since the testsuite for "runtest" never actually
	uses "spawn", so "close" ends up closing exp0, which is the
	terminal.  The ${tool}_exit proc is not called if the --tool
	option is not given, so this had no effect earlier.
	* testsuite/lib/libdejagnu.exp: New empty file.

2018-10-31  Jacob Bachmeyer  <jcb62281@gmail.com>

	* runtest.exp (load_tool_init): Add message indicating the
	expected location of the tool init file.

2018-10-31  Jacob Bachmeyer  <jcb62281@gmail.com>

	* contrib/sum2junit.sh (failures): Fix typo.

2018-10-31  Jacob Bachmeyer  <jcb62281@gmail.com>

	* configure.ac (DEJAGNU): Add comments.

2018-10-31  Jacob Bachmeyer  <jcb62281@gmail.com>

	* Makefile.am (DEJATOOL): List tools in testsuite.
	(RUNTESTDEFAULTFLAGS): Adjust to support per-tool testing.
	* testsuite/config/default.exp: Rename from this ...
	* testsuite/lib/runtest.exp: ... to this.
	(runtest_exit): Remove spurious "close".  This was causing
	per-tool testing to fail, since the testsuite for "runtest" never
	actually uses "spawn", so "close" ends up closing exp0, which is
	the terminal.  The ${tool}_exit proc is not called if the --tool
	option is not given, so this had no effect earlier.